<resources>
    <string name="app_name">MyCalendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="saturday">SAT</string>
    <string name="friday">FRI</string>
    <string name="thursday">THU</string>
    <string name="wednesday">WED</string>
    <string name="tuesday">TUE</string>
    <string name="monday">MON</string>
    <string name="sunday">SUN</string>
    <string name="weekly_calendar">Weekly Calendar</string>
    <string name="new_event">Add Event</string>
    <string name="addButton">Add</string>
    <string name="nameEvent">Name:</string>
    <string name="dateEvent">Date</string>
    <string name="timeEvent">Time</string>
</resources>